<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainScreenFragment">

    <fragment
        android:id="@+id/mainScreenFragment"
        android:name="earth.darkwhite.albiononlineplayerstats.mainscreen.MainScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_screen_fragment">
        <action
            android:id="@+id/action_mainScreenFragment_to_addPlayerFragment"
            app:destination="@id/addPlayerFragment" />
        <action
            android:id="@+id/action_mainScreenFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPlayerFragment"
        android:name="earth.darkwhite.albiononlineplayerstats.addplayer.AddPlayerFragment"
        android:label="@string/add_player"
        tools:layout="@layout/add_player_fragment" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="earth.darkwhite.albiononlineplayerstats.detail.DetailFragment"
        android:label="@string/report_detail"
        tools:layout="@layout/detail_fragment" >
        <argument
            android:name="data"
            app:argType="earth.darkwhite.albiononlineplayerstats.data.api.model.ReportsResponse" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="earth.darkwhite.albiononlineplayerstats.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>