<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="earth.darkwhite.albiononlineplayerstats.mainscreen.MainScreenViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_drop_down_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="?attr/dropDownCustomColor">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView_rv_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tracked_players"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:layout_margin="@dimen/_4dp"
                    android:background="?attr/colorControlNormal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    android:gravity="center_horizontal"
                    android:text="@string/no_player_currently_tracked"
                    android:visibility="@{viewModel.playersCount? View.VISIBLE : View.GONE}" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_players"
                    listDataPlayers="@{viewModel.trackedUsers}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_player_chip" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView_filter_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView_rv_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="@dimen/_4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/reports_type" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_reports_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_deaths_kills"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths_kills" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_deaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_kills"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kills" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/sort_by" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_sort_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_fame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fame" />
                </com.google.android.material.chip.ChipGroup>

                <!--                rangeValues="@{viewModel.fameRangeSliderValues}"-->
                <!--                rangeValues="@{viewModel.rangeSliderValues}"-->
                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/slider_fame_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_range_slider_for_fame_points"
                    android:visibility="gone"
                    app:labelBehavior="floating" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/sort_order" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_sort_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ascending" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descending" />
                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>