<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="earth.darkwhite.albiononlineplayerstats.mainscreen.MainScreenViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".mainscreen.MainScreenFragment">

        <include
            android:id="@+id/include_drop_down"
            layout="@layout/drop_down_layout" />

        <!--Background color is set in rounded_top_corners.xml too-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_rv_parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:color="?android:attr/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{viewModel.displayReportsCount}"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_elevate_main_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_elevate_main_layout"
                tools:text="X Reports found" />

            <ImageView
                android:id="@+id/img_elevate_main_layout"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/arrow_image"
                android:focusable="true"
                android:padding="@dimen/_2dp"
                android:rotation="180"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_drop_down_circle_24"
                tools:ignore="TouchTargetSizeCheck"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="?attr/colorControlNormal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_elevate_main_layout" />

            <!--            android:background="?attr/colorSurface"-->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:visibility="@{viewModel.loadingProgress? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_reports_list"
                listData="@{viewModel.reports}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                tools:listitem="@layout/item_main_screen" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16dp"
                android:gravity="center_horizontal"
                android:text="@string/no_kill_death_report_to_display"
                android:textStyle="bold"
                android:visibility="@{viewModel.reportsCountBool? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/rv_main_reports_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/add_new_player"
                android:textStyle="bold"
                android:visibility="@{viewModel.reportsCountBool? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="29dp"
                android:contentDescription="@string/desc_direction_image"
                android:visibility="@{viewModel.reportsCountBool? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_player"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_margin="@dimen/_16dp"
            android:contentDescription="@string/fab_desc"
            android:transitionName="@string/transition_name"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>